--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -21,3 +21,23 @@
   border-radius: 8px;
   
 }
+
+.raceBoard {
+  background: lightgray;
+}
+
+.lane {
+  position: relative;
+  margin: 3px auto 3px auto;
+  width: 90vw;
+  height: 60px;
+  background-color: burlywood;
+}
+
+/* .racerPic {
+  position: absolute;
+  height: 80%;
+  width: 25px;
+  background-color: red;
+  border: 1px solid blue;
+} */
